[metadata]
name = tslove-tools
description = "Tools for T's Love"
author = Takamatsu.Kyoko
author_email = 38364117+takamatsu-kyoko@users.noreply.github.com
version = 0.4.3
license = MIT
license_file = LICENSE
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/takamatsu-kyoko/tslove-tools
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: MIT License
    Natural Language :: Japanese
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
install_requires =
    requests
    beautifulsoup4
    pillow
setup_requires =
    pytest-runner
tests_require =
    pytest

[options.packages.find]
where = src

[options.extras_require]
develop =
    pytest

[options.entry_points]
console_scripts =
    imechen = tslove.imechen:main
    diarydump = tslove.diarydump:main

[aliases]
test = pytest
